# work_timer_egui

./: .gitignore  Cargo.toml  README.MD  build.rs  release.py
.github/workflows/: release.yml
src/: audio.rs  chart_ui.rs  history.rs  history_ui.rs  left_panel_ui.rs  main.rs  setting.rs  setting_ui.rs  tags_ui.rs  timer.rs  timers_ui.rs
