[package]
    edition = "2024"
    name = "work_timer"
    version = "0.3.0"

[build-dependencies]
    winres = "0.1"

[dependencies]
    chrono = "0.4"
    dirs = "6.0"
    eframe = "0.31"
    rodio = "0.20"
    serde = { version = "1.0", features = ["derive"] }
    sled = "0.34"
    toml = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
    env_logger = "0.11.8"
