[package]
    edition = "2024"
    name = "work_timer"
    version = "0.8.0"

[build-dependencies]
    winres = "0.1"

[dependencies]
    chrono = "0.4"
    dirs = "6.0"
    eframe = "0.32"
    egui_extras = "0.32"
    rodio = "0.21"
    serde = { version = "1.0", features = ["derive"] }
    sled = "0.34"
    toml = "0.9"
    egui_plot = "0.33"
    rfd = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
    env_logger = "0.11.8"
