[package]
    edition = "2024"
    name = "work_timer"
    version = "1.0.1"

    [package.metadata.bundle]
        icon = ["assets/timer.png"]
        identifier = "com.jalon.worktimeregui"
        name = "WorkTimer"
        resources = ["assets"]

[build-dependencies]
    winres = "0.1"

[dependencies]
    chrono = "0.4"
    csv = "1.3"
    dirs = "6.0"
    eframe = "0.32"
    egui_extras = "0.32"
    egui_plot = "0.33"
    rfd = "0.15"
    rodio = "0.21"
    serde = { version = "1.0", features = ["derive"] }
    sled = "0.34"
    toml = "0.9"
